--- a/package.json
+++ b/package.json
@@ -2,45 +2,80 @@
   "name": "stackblitz-starters-vdqeuv",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "rxjs": "7.8.1",
-    "tslib": "2.6.1",
-    "zone.js": "0.13.1",
-    "@angular/core": "16.1.8",
-    "@angular/forms": "16.1.8",
-    "@types/jasmine": "4.0.3",
-    "@angular/common": "16.1.8",
-    "@angular/router": "16.1.8",
-    "@angular/compiler": "16.1.8",
-    "@angular/animations": "16.1.8",
-    "@angular/platform-browser": "16.1.8",
-    "@angular/platform-browser-dynamic": "16.1.8"
-  },
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "dependencies": {
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/localize": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-idle/core": "^11.0.3",
+    "@ng-idle/keepalive": "^11.0.3",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "@videogular/ngx-videogular": "~6.0.0",
+    "bootstrap": "^5.2.0",
+    "crypto-es": "^1.2.7",
+    "html2pdf.js": "^0.10.1",
+    "is-ua-webview": "^1.0.5",
+    "num-words": "^1.2.3",
+    "rxjs": "~6.5.5",
+    "stacktrace-js": "^2.0.2",
+    "tslib": "^2.0.0",
+    "uikit": "^3.14.1",
+    "zone.js": "~0.11.4"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-eslint/builder": "14.0.3",
+    "@angular-eslint/eslint-plugin": "14.0.3",
+    "@angular-eslint/eslint-plugin-template": "14.0.3",
+    "@angular-eslint/schematics": "14.0.3",
+    "@angular-eslint/template-parser": "14.0.3",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
+    "@types/core-js": "^2.5.8",
     "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "colors": "^1.4.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^8.18.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
+    "express": "^4.17.1",
+    "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "jszip": "^3.7.1",
+    "karma": "^6.3.20",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sonarqube-reporter": "^1.4.0",
+    "minimist": "^1.2.5",
+    "node-http-proxy-json": "^0.1.9",
+    "properties-reader": "^2.2.0",
     "protractor": "~7.0.0",
+    "sonarqube-scanner": "^2.8.1",
+    "source-map-explorer": "^2.5.2",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.8.4"
   }
 }
